--- a/about-us.html
+++ b/about-us.html
@@ -148,31 +148,7 @@
 </ul>
 </li>
 
-<li class="nav-item mr-0"><a href="#" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers
-</a></li>
-<li class="nav-item mr-0"><a href="#" title="Other Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Other Machines
-</a></li>
-</ul>
-</li>
 
-<li class="nav-item mr-0"><a href="lithium-batteries.html" title="Lithium Batteries Lines" class="nav-link"> Lithium Cell Lines</a>
-<ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="for-cylindrical-batteries.html" title="For Cylindrical Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> For Cylindrical Batteries</a>
-<ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" title="Turnkey Assembly Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Assembly Line </a></li>
-<li class="nav-item mr-0"><a href="#" title="Cell Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
-<li class="nav-item mr-0"><a href="#" title="Sorting Machine" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sorting Machine</a></li>
-<li class="nav-item mr-0"><a href="#" title="Welding Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Welding Machines</a></li>
-</ul>
-</li>
-<li class="nav-item mr-0"><a href="for-prismatic-batteries.html" title="For Prismatic Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> For Prismatic Batteries</a>
-<ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" title="Turnkey Assembly Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Assembly Line </a></li>
-<li class="nav-item mr-0"><a href="#" title="Cell Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
-<li class="nav-item mr-0"><a href="#" title="Sorting Machine" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sorting Machine</a></li>
-<li class="nav-item mr-0"><a href="#" title="Welding Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Welding Machines</a></li>
-</ul>
-</li>
 
 <li class="nav-item mr-0"><a href="#" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers
 </a></li>
@@ -189,6 +165,25 @@
 </ul>
 </li>-->
 
+<li class="nav-item mr-0"><a href="lithium-cell-lines.html" title="Lithium CellLines" class="nav-link"> Lithium Cell Lines</a>
+<ul class="dropdown-menu">
+<li class="nav-item mr-0"><a href="#" title="LIB Separator Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Separator Line</a>
+</li>
+<li class="nav-item mr-0"><a href="#" title="GW Factories" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> GW Factories</a>
+</li>
+<li class="nav-item mr-0"><a href="#" title="Lab/ Pilot Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lab/ Pilot Lines</a>
+</li>
+<li class="nav-item mr-0"><a href="for-prismatic-batteries.html" title="For Prismatic Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cell Raw Materials</a>
+<ul class="dropdown-menu">
+<li class="nav-item mr-0"><a href="#" title="Copper Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Copper Foil </a></li>
+<li class="nav-item mr-0"><a href="#" title="Aluminum Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Aluminum Foil</a></li>
+<li class="nav-item mr-0"><a href="#" title="Belt Seperator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Belt Seperator</a></li>
+<li class="nav-item mr-0"><a href="#" title="Electrolyte" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Electrolyte</a></li>
+<li class="nav-item mr-0"><a href="#" title="Casing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Casing</a></li>
+</ul>
+</li>
+</ul>
+</li>
 <li class="nav-item mr-0"><a href="career.html" title="Career" class="nav-link">Career  </a></li>
 <li class="nav-item mr-0"><a href="news-and-events.html" title="News & Events" class="nav-link">News & Events  </a></li>
 <li class="nav-item mr-0"><a href="contact-us.html" title="Contact Us" class="nav-link">Contact Us</a></li>
@@ -210,10 +205,11 @@
 <li>
 <a href="solar-panel-production-turnkey-line.html" title="Solar Panel Production Line">Solar Panel Production Line</a>
 <ul>
-<li><a href="#" title="Turnkey Automation">Turnkey Automation</a></li>
-<li><a href="#" title="Stringer">Stringer</a></li>
+<li><a href="#" title="Semi Auto Line">Semi Auto Line</a></li>
+<li><a href="#" title="Fully Auto Line">Fully Auto Line</a></li>
+<li><a href="#" title="Tarbor and Stringer">Tarbor and Stringer</a></li>
 <li><a href="#" title="Laminator">Laminator</a></li>
-<li><a href="#" title="Sun Simulator">Sun Simulator</a></li>
+<li><a href="#" title="Laser Cutters">Laser Cutters</a></li>
 </ul>
 </li>
 <!-- Two -->
@@ -276,6 +272,8 @@
 </ul>
 </li>
 
+<li><a href="lithium-cell-lines.html" title="Lithium Cell Lines">Lithium Cell Lines</a>
+</li>
 <li><a href="career.html" title="Career">Career</a></li>
 <li><a href="news-and-events.html" title="News & Events">News & Events</a></li>
 <li><a href="contact-us.html" title="Contact Us">Contact Us</a></li>
@@ -464,7 +462,7 @@ Balancing her professional and personal life with ease, Harleen is also a mother
   <ul class="mt-2 d-block">
   <li class="border-bottom"><a href="solar-pv.html" title="Solar PV" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar PV</a></li>
   <li class="border-bottom"><a href="lithium-batteries.html" title="Lithium Batteries Lines" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries Lines</a></li>
-  <li class="border-bottom"><a href="lithium-batteries.html" title="Lithium Cell Lines" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cell Lines</a></li>
+  <li class="border-bottom"><a href="lithium-cell-lines.html" title="Lithium Cell Lines" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cell Lines</a></li>
 
 
 
