--- a/for-prismatic-batteries.html
+++ b/for-prismatic-batteries.html
@@ -152,31 +152,7 @@
 </ul>
 </li>
 
-<li class="nav-item mr-0"><a href="#" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers
-</a></li>
-<li class="nav-item mr-0"><a href="#" title="Other Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Other Machines
-</a></li>
-</ul>
-</li>
 
-<li class="nav-item mr-0"><a href="lithium-batteries.html" title="Lithium Batteries Lines" class="nav-link"> Lithium Cell Lines</a>
-<ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="for-cylindrical-batteries.html" title="For Cylindrical Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> For Cylindrical Batteries</a>
-<ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" title="Turnkey Assembly Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Assembly Line </a></li>
-<li class="nav-item mr-0"><a href="#" title="Cell Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
-<li class="nav-item mr-0"><a href="#" title="Sorting Machine" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sorting Machine</a></li>
-<li class="nav-item mr-0"><a href="#" title="Welding Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Welding Machines</a></li>
-</ul>
-</li>
-<li class="nav-item mr-0"><a href="for-prismatic-batteries.html" title="For Prismatic Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> For Prismatic Batteries</a>
-<ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" title="Turnkey Assembly Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Assembly Line </a></li>
-<li class="nav-item mr-0"><a href="#" title="Cell Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
-<li class="nav-item mr-0"><a href="#" title="Sorting Machine" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sorting Machine</a></li>
-<li class="nav-item mr-0"><a href="#" title="Welding Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Welding Machines</a></li>
-</ul>
-</li>
 
 <li class="nav-item mr-0"><a href="#" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers
 </a></li>
@@ -193,6 +169,25 @@
 </ul>
 </li>-->
 
+<li class="nav-item mr-0"><a href="lithium-cell-lines.html" title="Lithium CellLines" class="nav-link"> Lithium Cell Lines</a>
+<ul class="dropdown-menu">
+<li class="nav-item mr-0"><a href="#" title="LIB Separator Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Separator Line</a>
+</li>
+<li class="nav-item mr-0"><a href="#" title="GW Factories" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> GW Factories</a>
+</li>
+<li class="nav-item mr-0"><a href="#" title="Lab/ Pilot Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lab/ Pilot Lines</a>
+</li>
+<li class="nav-item mr-0"><a href="for-prismatic-batteries.html" title="For Prismatic Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cell Raw Materials</a>
+<ul class="dropdown-menu">
+<li class="nav-item mr-0"><a href="#" title="Copper Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Copper Foil </a></li>
+<li class="nav-item mr-0"><a href="#" title="Aluminum Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Aluminum Foil</a></li>
+<li class="nav-item mr-0"><a href="#" title="Belt Seperator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Belt Seperator</a></li>
+<li class="nav-item mr-0"><a href="#" title="Electrolyte" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Electrolyte</a></li>
+<li class="nav-item mr-0"><a href="#" title="Casing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Casing</a></li>
+</ul>
+</li>
+</ul>
+</li>
 <li class="nav-item mr-0"><a href="career.html" title="Career" class="nav-link">Career  </a></li>
 <li class="nav-item mr-0"><a href="news-and-events.html" title="News & Events" class="nav-link">News & Events  </a></li>
 <li class="nav-item mr-0"><a href="contact-us.html" title="Contact Us" class="nav-link">Contact Us</a></li>
@@ -214,10 +209,11 @@
 <li>
 <a href="solar-panel-production-turnkey-line.html" title="Solar Panel Production Line">Solar Panel Production Line</a>
 <ul>
-<li><a href="#" title="Turnkey Automation">Turnkey Automation</a></li>
-<li><a href="#" title="Stringer">Stringer</a></li>
+<li><a href="#" title="Semi Auto Line">Semi Auto Line</a></li>
+<li><a href="#" title="Fully Auto Line">Fully Auto Line</a></li>
+<li><a href="#" title="Tarbor and Stringer">Tarbor and Stringer</a></li>
 <li><a href="#" title="Laminator">Laminator</a></li>
-<li><a href="#" title="Sun Simulator">Sun Simulator</a></li>
+<li><a href="#" title="Laser Cutters">Laser Cutters</a></li>
 </ul>
 </li>
 <!-- Two -->
@@ -247,9 +243,6 @@
 
 </ul>
 </li>
-
-
-
 <li><a href="lithium-batteries.html" title="Lithium Batteries Lines">Lithium Batteries Lines</a>
 <ul>
 <li>
@@ -280,6 +273,8 @@
 </ul>
 </li>
 
+<li><a href="lithium-cell-lines.html" title="Lithium Cell Lines">Lithium Cell Lines</a>
+</li>
 <li><a href="career.html" title="Career">Career</a></li>
 <li><a href="news-and-events.html" title="News & Events">News & Events</a></li>
 <li><a href="contact-us.html" title="Contact Us">Contact Us</a></li>
@@ -326,11 +321,11 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Turnkey Assembly Line for Prismatic Batteries in India"><img src="img/prismatic-assembley-line.png" class="card-img-top product-img" alt="Turnkey Assembly Line for Prismatic Batteries in India" title="Turnkey Assembly Line for Prismatic Batteries in India"></a>
+        <a href="#" title="Semi Auto Lines for Prismatic Batteries in India"><img src="img/prismatic-assembley-line.png" class="card-img-top product-img" alt="Semi Auto Lines for Prismatic Batteries in India" title="Semi Auto Lines for Prismatic Batteries in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title">Turnkey Assembly Line</h5>
-            <p class="card-text text-muted">Optimized prismatic battery production with turnkey assembly line.</p>
+            <h5 class="card-title">Semi Auto Lines</h5>
+            <p class="card-text text-muted">Efficient Semi Auto Lines specially designed for prismatic battery production. Combines precision automation and flexibility to streamline assembly, welding, and testing processes for high-quality battery manufacturing.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
@@ -343,11 +338,11 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Cell Testers for Prismatic Batteries in India"><img src="img/prismatic-cell-tester.png" class="card-img-top product-img" alt="Cell Testers for Prismatic Batteries in India" title="Cell Testers for Prismatic Batteries in India"></a>
+        <a href="#" title="Automatic Lines for Prismatic Batteries in India"><img src="img/turnkey-automation.png" class="card-img-top product-img" alt="Automatic Lines for Prismatic Batteries in India" title="Automatic Lines for Prismatic Batteries in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title">Cell Testers</h5>
-            <p class="card-text text-muted">Accurate testers for prismatic battery cell performance.</p>
+            <h5 class="card-title">Automatic Lines</h5>
+            <p class="card-text text-muted">Advanced Automatic Lines designed for high-speed, fully automated production of prismatic batteries. Ensures consistent quality, precision assembly, and increased throughput for modern battery manufacturing.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
@@ -358,13 +353,13 @@
     </div>
 
     <!-- Card 3 -->
-    <div class="col-md-4 d-flex">
+         <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Sorting Machine for Prismatic Batteries in India"><img src="img/prismatic-sorting-machine.png" class="card-img-top product-img" alt="Sorting Machine for Prismatic Batteries in India" title="Sorting Machine for Prismatic Batteries in India"></a>
+       <a href="#" title="Welding Machines for Prismatic Batteries in India"><img src="img/welding-machines.png" class="card-img-top product-img" alt="Welding Machines for Prismatic Batteries in India" title="Welding Machines for Prismatic Batteries in India"></a> 
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title">Sorting Machine</h5>
-            <p class="card-text text-muted">Efficient prismatic battery sorting machine for quality control.</p>
+            <h5 class="card-title">Laser Welding Machines</h5>
+            <p class="card-text text-muted">Precision Laser Welding Machines designed specifically for prismatic battery manufacturing. Provide clean, strong welds with minimal heat distortion to ensure battery safety and performance.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
@@ -378,14 +373,44 @@
 
 <div class="container py-5">
   <div class="row g-4">
-    <!-- Card 1 -->
-    <div class="col-md-4 d-flex">
+        <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-       <a href="#" title="Welding Machines for Prismatic Batteries in India"><img src="img/prismatic-welding-machine.png" class="card-img-top product-img" alt="Welding Machines for Prismatic Batteries in India" title="Welding Machines for Prismatic Batteries in India"></a> 
+        <a href="#" title="Cell Testers for Prismatic Batteries in India"><img src="img/cell-testers.png" class="card-img-top product-img" alt="Cell Testers for Prismatic Batteries in India" title="Cell Testers for Prismatic Batteries in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title">Welding Machines</h5>
-            <p class="card-text text-muted">High-precision welding machines for prismatic battery assembly.</p>
+            <h5 class="card-title">Cell Testers</h5>
+            <p class="card-text text-muted">Accurate and reliable Cell Testers designed for prismatic battery quality control. Ensure precise measurement of voltage, capacity, and internal resistance to guarantee optimal battery performance and safety.</p>
+          </div>
+          <div class="mt-3 d-flex justify-content-between">
+            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+          </div>
+        </div>
+      </div>
+    </div>
+        <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <a href="#" title="Battery Pack Testers for Prismatic Batteries in India"><img src="img/battery-pack-tester.png" class="card-img-top product-img" alt="Battery Pack Testers for Prismatic Batteries in India" title="Battery Pack Testers for Prismatic Batteries in India"></a>
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title">Battery Pack Testers</h5>
+            <p class="card-text text-muted">Advanced Battery Pack Testers designed for prismatic battery assemblies. Provide comprehensive testing of voltage, capacity, and safety parameters to ensure high performance and reliability of battery packs.</p>
+          </div>
+          <div class="mt-3 d-flex justify-content-between">
+            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Card 1 -->
+        <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <a href="#" title="Sorting Machine for Prismatic Batteries in India"><img src="img/prismatic-sorting-machine.png" class="card-img-top product-img" alt="Sorting Machine for Prismatic Batteries in India" title="Sorting Machine for Prismatic Batteries in India"></a>
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title">Sorting Machine</h5>
+            <p class="card-text text-muted">Efficient Sorting Machines designed for prismatic batteries to accurately classify cells based on voltage, capacity, and quality. Streamlines battery production with fast and precise sorting for improved pack performance.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
@@ -427,7 +452,7 @@
   <ul class="mt-2 d-block">
   <li class="border-bottom"><a href="solar-pv.html" title="Solar PV" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar PV</a></li>
   <li class="border-bottom"><a href="lithium-batteries.html" title="Lithium Batteries Lines" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries Lines</a></li>
-  <li class="border-bottom"><a href="lithium-batteries.html" title="Lithium Cell Lines" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cell Lines</a></li>
+  <li class="border-bottom"><a href="lithium-cell-lines.html" title="Lithium Cell Lines" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cell Lines</a></li>
 
 
 
