--- a/solar-panel-production-turnkey-line.html
+++ b/solar-panel-production-turnkey-line.html
@@ -151,31 +151,7 @@
 </ul>
 </li>
 
-<li class="nav-item mr-0"><a href="#" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers
-</a></li>
-<li class="nav-item mr-0"><a href="#" title="Other Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Other Machines
-</a></li>
-</ul>
-</li>
 
-<li class="nav-item mr-0"><a href="lithium-batteries.html" title="Lithium Batteries Lines" class="nav-link"> Lithium Cell Lines</a>
-<ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="for-cylindrical-batteries.html" title="For Cylindrical Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> For Cylindrical Batteries</a>
-<ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" title="Turnkey Assembly Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Assembly Line </a></li>
-<li class="nav-item mr-0"><a href="#" title="Cell Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
-<li class="nav-item mr-0"><a href="#" title="Sorting Machine" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sorting Machine</a></li>
-<li class="nav-item mr-0"><a href="#" title="Welding Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Welding Machines</a></li>
-</ul>
-</li>
-<li class="nav-item mr-0"><a href="for-prismatic-batteries.html" title="For Prismatic Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> For Prismatic Batteries</a>
-<ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" title="Turnkey Assembly Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Assembly Line </a></li>
-<li class="nav-item mr-0"><a href="#" title="Cell Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
-<li class="nav-item mr-0"><a href="#" title="Sorting Machine" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sorting Machine</a></li>
-<li class="nav-item mr-0"><a href="#" title="Welding Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Welding Machines</a></li>
-</ul>
-</li>
 
 <li class="nav-item mr-0"><a href="#" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers
 </a></li>
@@ -192,6 +168,25 @@
 </ul>
 </li>-->
 
+<li class="nav-item mr-0"><a href="lithium-cell-lines.html" title="Lithium CellLines" class="nav-link"> Lithium Cell Lines</a>
+<ul class="dropdown-menu">
+<li class="nav-item mr-0"><a href="#" title="LIB Separator Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Separator Line</a>
+</li>
+<li class="nav-item mr-0"><a href="#" title="GW Factories" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> GW Factories</a>
+</li>
+<li class="nav-item mr-0"><a href="#" title="Lab/ Pilot Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lab/ Pilot Lines</a>
+</li>
+<li class="nav-item mr-0"><a href="for-prismatic-batteries.html" title="For Prismatic Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cell Raw Materials</a>
+<ul class="dropdown-menu">
+<li class="nav-item mr-0"><a href="#" title="Copper Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Copper Foil </a></li>
+<li class="nav-item mr-0"><a href="#" title="Aluminum Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Aluminum Foil</a></li>
+<li class="nav-item mr-0"><a href="#" title="Belt Seperator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Belt Seperator</a></li>
+<li class="nav-item mr-0"><a href="#" title="Electrolyte" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Electrolyte</a></li>
+<li class="nav-item mr-0"><a href="#" title="Casing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Casing</a></li>
+</ul>
+</li>
+</ul>
+</li>
 <li class="nav-item mr-0"><a href="career.html" title="Career" class="nav-link">Career  </a></li>
 <li class="nav-item mr-0"><a href="news-and-events.html" title="News & Events" class="nav-link">News & Events  </a></li>
 <li class="nav-item mr-0"><a href="contact-us.html" title="Contact Us" class="nav-link">Contact Us</a></li>
@@ -247,9 +242,6 @@
 
 </ul>
 </li>
-
-
-
 <li><a href="lithium-batteries.html" title="Lithium Batteries Lines">Lithium Batteries Lines</a>
 <ul>
 <li>
@@ -280,6 +272,8 @@
 </ul>
 </li>
 
+<li><a href="lithium-cell-lines.html" title="Lithium Cell Lines">Lithium Cell Lines</a>
+</li>
 <li><a href="career.html" title="Career">Career</a></li>
 <li><a href="news-and-events.html" title="News & Events">News & Events</a></li>
 <li><a href="contact-us.html" title="Contact Us">Contact Us</a></li>
@@ -330,7 +324,7 @@
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Semi Auto Line</h5>
-            <p class="card-text text-muted">Complete turnkey automation solutions for efficient industrial processes.</p>
+            <p class="card-text text-muted">Efficient and reliable Semi Auto Line designed for streamlined production processes. Ideal for small to medium-scale manufacturing, offering precision, flexibility, and cost-effective automation.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
@@ -347,7 +341,7 @@
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Fully Auto Line</h5>
-            <p class="card-text text-muted">Advanced stringer equipment for automated PV manufacturing.</p>
+            <p class="card-text text-muted">High-performance Fully Auto Line for complete automation of manufacturing processes. Delivers maximum efficiency, precision, and productivity for large-scale production with minimal human intervention.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
@@ -364,7 +358,7 @@
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Tarbor and Stringer</h5>
-            <p class="card-text text-muted">Optimized laminators for durable and high-quality solar panels.</p>
+            <p class="card-text text-muted">Advanced Tabber and Stringer machine for high-speed solar cell interconnection. Ensures precise tabbing and stringing for enhanced efficiency and durability in PV module production.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
@@ -385,7 +379,7 @@
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Laminator</h5>
-            <p class="card-text text-muted">Optimized laminators for durable and high-quality solar panels.</p>
+            <p class="card-text text-muted">High-precision Laminator designed for reliable and uniform encapsulation. Ideal for solar panel production, ensuring strong bonding, durability, and long-term performance.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
@@ -400,7 +394,7 @@
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Laser Cutters</h5>
-            <p class="card-text text-muted">Reliable sun simulator for solar module quality testing.</p>
+            <p class="card-text text-muted">High-precision Laser Cutters for clean, accurate cuts on metal, wood, plastic, and more. Ideal for industrial, commercial, and creative applications with advanced automation and minimal waste.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
@@ -442,7 +436,7 @@
   <ul class="mt-2 d-block">
   <li class="border-bottom"><a href="solar-pv.html" title="Solar PV" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar PV</a></li>
   <li class="border-bottom"><a href="lithium-batteries.html" title="Lithium Batteries Lines" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries Lines</a></li>
-  <li class="border-bottom"><a href="lithium-batteries.html" title="Lithium Cell Lines" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cell Lines</a></li>
+  <li class="border-bottom"><a href="lithium-cell-lines.html" title="Lithium Cell Lines" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cell Lines</a></li>
 
 
 
