--- a/lithium-cell-lines.html
+++ b/lithium-cell-lines.html
@@ -1,14 +1,13 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <!-- Title -->
-  <title>Solar PV Raw Materials | Aluminum Frames & Solar Cells - Indygreen Technologies</title>
+  <title>Cylindrical Battery Production Line | Assembly, Welding, Testing & Sorting - Indygreen Technologies</title>
 
   <!-- Meta Description -->
-  <meta name="description" content="Indygreen Technologies supplies high-quality solar PV raw materials including aluminum frames and high-efficiency solar cells. Reliable, durable, and cost-effective solutions for solar panel manufacturing." />
+  <meta name="description" content="Indygreen Technologies delivers turnkey cylindrical battery production solutions including assembly lines, welding machines, advanced cell testers, and automated sorting machines for high-quality lithium battery manufacturing." />
 
   <!-- Meta Keywords -->
-  <meta name="keywords" content="solar PV raw materials, solar panel raw materials, aluminum frames for solar panels, solar cells supplier, solar module assembly materials, photovoltaic manufacturing materials, solar energy components, raw materials for solar PV production" />
+  <meta name="keywords" content="cylindrical battery production line, lithium battery assembly line, cylindrical battery welding machines, cylindrical cell testers, cylindrical battery sorting machine, battery pack manufacturing equipment, cylindrical cell production turnkey, lithium-ion battery machinery, cylindrical battery solutions" />
 
   <!-- Robots -->
   <meta name="robots" content="index, follow" />
@@ -18,19 +17,19 @@
   <meta name="publisher" content="Indygreen Technologies Pvt. Ltd." />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Solar PV Raw Materials | Aluminum Frames & Solar Cells - Indygreen Technologies" />
-  <meta property="og:description" content="Get durable aluminum frames and high-efficiency solar cells from Indygreen Technologies – trusted supplier of solar PV raw materials worldwide." />
-  <meta property="og:url" content="https://www.indygreentech.com/raw-materials.html" />
+  <meta property="og:title" content="Cylindrical Battery Production Line | Assembly, Welding, Testing & Sorting" />
+  <meta property="og:description" content="Turnkey cylindrical battery production line by Indygreen Technologies – including assembly lines, welding machines, precise cell testers, and automated sorting machines." />
+  <meta property="og:url" content="https://www.indygreentech.com/for-cylindrical-batteries.html" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Indygreen Technologies" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Solar PV Raw Materials | Aluminum Frames & Solar Cells" />
-  <meta name="twitter:description" content="Indygreen Technologies provides premium raw materials for solar panel production – including aluminum frames and solar cells." />
+  <meta name="twitter:title" content="Cylindrical Battery Production Line | Assembly, Welding, Testing & Sorting" />
+  <meta name="twitter:description" content="End-to-end cylindrical battery turnkey production line solutions – assembly, welding, testing & sorting for lithium batteries." />
 
   <!-- Canonical -->
-  <link rel="canonical" href="https://www.indygreentech.com/raw-materials.html" />
+  <link rel="canonical" href="https://www.indygreentech.com/for-cylindrical-batteries.html" />
    <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Font Awesome for icons -->
@@ -294,23 +293,20 @@
 </div>
 </section>
 <!--  -->
-<section class="ttm-page-title-row">
+<section class="ttm-page-title-row" style="background: url(img/batteries-banner.png)no-repeat; background-size: cover; background-position: 50% 15%;">
 <div class="container">
 <div class="row">
 <div class="col-md-12"> 
 <div class="title-box ttm-textcolor-white">
 <div class="page-title-heading">
-<h1 class="title text-white">RAW MATERIALS</h1>
+<h1 class="title text-white">Lithium Cell Lines</h1>
 </div><!-- /.page-title-captions -->
 <div class="breadcrumb-wrapper">
 <span>
 <a title="Homepage" href="index.html" class="text-white"><i class="ti ti-home"></i>Home</a>
 </span>
 <span class="ttm-bread-sep text-white">/</span>
-<a title="Homepage" href="solar-pv.html" title="Solar PV" class="text-white"><i class="ti ti-home"></i>Solar PV</a>
-</span>
-<span class="ttm-bread-sep text-white">/</span>
-<span class="text-white">Raw Materials</span>
+<span class="text-white">Lithium Cell Lines</span>
 </div>  
 </div>
 </div><!-- /.col-md-12 -->  
@@ -319,114 +315,7 @@
 </section>
 <!-- About Us -->
  
-<div class="container py-5">
-  <div class="row g-4">
-    <!-- Card 1 -->
-    <div class="col-md-4 d-flex">
-      <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Aluminum Frames in India"><img src="img/solar-cells.png" class="card-img-top product-img" alt="Aluminum Frames in India" title="Aluminum Frames in India"></a>
-        <div class="card-body d-flex flex-column justify-content-between">
-          <div>
-            <h5 class="card-title"> Solar Cells</h5>
-            <p class="card-text text-muted">High-efficiency solar cells designed to convert sunlight into electricity with maximum performance. Ideal for residential, commercial, and industrial solar energy systems.</p>
-          </div>
-          <div class="mt-3 d-flex justify-content-between">
-            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
-          </div>
-        </div>
-      </div>
-    </div>
 
-    <!-- Card 2 -->
-    <div class="col-md-4 d-flex">
-      <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Solar Plant in India"><img src="img/solar-plant.png" class="card-img-top product-img" alt="Solar Plant in India" title="Solar Plant in India"></a>
-        <div class="card-body d-flex flex-column justify-content-between">
-          <div>
-            <h5 class="card-title">Solar Plant</h5>
-            <p class="card-text text-muted">Reliable and scalable solar plant solutions for clean, renewable energy generation. Designed for utility-scale, commercial, and industrial applications to reduce carbon footprint and lower energy costs.</p>
-          </div>
-          <div class="mt-3 d-flex justify-content-between">
-            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Card 3 -->
-      <div class="col-md-4 d-flex">
-      <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Solar Aluminum Frame in India"><img src="img/aluminum-frames.png" class="card-img-top product-img" alt="Solar Aluminum Frame in India" title="Solar Aluminum Frame in India"></a>
-        <div class="card-body d-flex flex-column justify-content-between">
-          <div>
-            <h5 class="card-title">Solar Aluminum Frame</h5>
-            <p class="card-text text-muted">Durable and corrosion-resistant solar aluminum frames designed to provide strong structural support for solar panels. Ideal for long-term outdoor use in all weather conditions.</p>
-          </div>
-          <div class="mt-3 d-flex justify-content-between">
-            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="container py-5">
-  <div class="row g-4">
-    <!-- Card 1 -->
-    <div class="col-md-4 d-flex">
-      <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Solar Junction Box in India"><img src="img/solar-junction-box.png" class="card-img-top product-img" alt="Solar Junction Box in India" title="Solar Junction Box in India"></a>
-        <div class="card-body d-flex flex-column justify-content-between">
-          <div>
-            <h5 class="card-title"> Solar Junction Box</h5>
-            <p class="card-text text-muted">Weatherproof solar junction boxes designed for safe and efficient electrical connections in solar panels. Features high thermal resistance, IP protection, and reliable performance for long-term durability.</p>
-          </div>
-          <div class="mt-3 d-flex justify-content-between">
-            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Card 2 -->
-    <div class="col-md-4 d-flex">
-      <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Solar Sealant and Bonding in India"><img src="img/solar-sealent-and-bonding.png" class="card-img-top product-img" alt="Solar Sealant and Bonding in India" title="Solar Sealant and Bonding in India"></a>
-        <div class="card-body d-flex flex-column justify-content-between">
-          <div>
-            <h5 class="card-title">Solar Sealant and Bonding</h5>
-            <p class="card-text text-muted">High-performance solar sealant and bonding solutions for secure, weather-resistant sealing of solar panels and components. Ensures long-lasting adhesion, UV stability, and protection in harsh environments.</p>
-          </div>
-          <div class="mt-3 d-flex justify-content-between">
-            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Card 3 -->
-      <div class="col-md-4 d-flex">
-      <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Solar wire and plugs in India"><img src="img/solar-wire-and-plugs.png" class="card-img-top product-img" alt="Solar wire and plugs in India" title="Solar wire and plugs in India"></a>
-        <div class="card-body d-flex flex-column justify-content-between">
-          <div>
-            <h5 class="card-title">Solar wire and plugs</h5>
-            <p class="card-text text-muted">Durable solar wires and plugs designed for efficient and safe electrical connections in solar energy systems. Weather-resistant, UV-stable, and easy to install for residential and commercial solar installations.</p>
-          </div>
-          <div class="mt-3 d-flex justify-content-between">
-            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
   <!-- Footer -->
 <footer class="py-4">
 <div class="container">
